--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "firebase-admin": "^13.6.0",
     "gray-matter": "^4.0.3",
     "next": "16.0.5",
     "react": "19.2.0",
