--- a/package.json
+++ b/package.json
@@ -10,12 +10,17 @@
   },
   "dependencies": {
     "@graphql-yoga/node": "^3.9.1",
+    "@mdx-js/mdx": "^3.1.1",
+    "@mdx-js/react": "^3.1.1",
+    "@next/mdx": "^16.0.10",
     "firebase-admin": "^13.6.0",
+    "fs": "^0.0.1-security",
     "graphql": "^16.12.0",
     "graphql-request": "^7.4.0",
     "graphql-yoga": "^5.17.1",
     "gray-matter": "^4.0.3",
     "next": "16.0.5",
+    "path": "^0.12.7",
     "react": "19.2.0",
     "react-dom": "19.2.0"
   },
