--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "graphql-request": "^7.4.0",
     "graphql-yoga": "^5.17.1",
     "gray-matter": "^4.0.3",
-    "next": "16.0.5",
+    "next": "^16.1.0",
     "path": "^0.12.7",
     "react": "19.2.0",
     "react-dom": "19.2.0"
